--- a/Aula1/slides/index.html
+++ b/Aula1/slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Optimization Technology</title>
+		<title>Front-End Intelligence</title>
 
 		<link rel="stylesheet" href="../../css/reveal.css">
 		<link rel="stylesheet" href="../../gwl_styles.css">
@@ -27,7 +27,7 @@
 			<div class="slides">
 				  <section>
              <img src="figuras/logo.png" style="width: 40%" />
-             <h2>Optimization Technology</h2>
+             <h2>Front-End Intelligence</h2>
              <h3>Prof. Guilherme Wachs</h3>
           </section>
         <section>
@@ -41,24 +41,27 @@
                 </ul>
                 <li class="fragment">Aulas:
                     <ul>
-                        <li class="fragment">Web, C, C++, Algoritmos, Estruturas de Dados, Optimization Technology</li>
+                        <li class="fragment">Web, C, C++, Algoritmos, Estruturas de Dados, Optimization Technology, Front-End Intelligence</li>
                     </ul></li>
                 <li class="fragment">Twitter: <a href="http://twitter.com/gwachsfei">@gwachsfei</a></li>
 
             </ul>
         </section>
         <section>
-            <h2 class="green">Optimization Technology?</h2>
+            <h2 class="green">Front-End Intelligence ?</h2>
             <ul>
-                <li class="fragment">Maximizar a produção no desenvolvimento de sistemas para internet</li>
+                <li class="fragment">Utilização dos frameworks Front-End mais importantes do mercado</li>
             </ul>
             <br>
             <div class="fragment"
                  style="background-color: rgba(255,255,255,0.5); border-radius: 20px; border: 3px dashed black; display: inline-block">
                 <img class="plain fragment" src="figuras/HTML5.png" style="height: 150px">
                 <img class="plain fragment" src="figuras/CSS3.png" style="height: 150px">
-                <img class="plain fragment" src="figuras/JS.png" style="height: 160px">
-                <img class="plain fragment" src="figuras/NodeJS.png" style="height: 150px;">
+                <img class="plain fragment" src="figuras/JS.png" style="height: 150px;">
+                <br/>
+                <img class="plain fragment" src="figuras/react.png" style="height: 100px">
+                <img class="plain fragment" src="figuras/AngularJS-Shield.svg" style="height: 150px;">
+                <img class="plain fragment" src="figuras/jekyll.png" style="height: 150px;">
             </div>
         </section>
         <section>
@@ -69,13 +72,10 @@
                     <li class="fragment green-current">Otimizar o tempo de desenvolvimento</li>
                     <li class="fragment green-current">Aprender novas tecnologias</li>
                     <li class="fragment green-current">Manipular novos frameworks</li>
+                    <li class="fragment green-current">Aplicação do Javascript Avançado</li>
                     <li class="fragment green-current">Nodejs</li>
-                    <li class="fragment green-current">Bootstrap</li>
-                    <li class="fragment green-current">jQuery?</li>
-                    <li class="fragment green-current">jQuery UI?</li>
-                    <li class="fragment green-current">GitHub?</li>
+                    <li class="fragment green-current">GitHub</li>
                     <li class="fragment green-current">Linux?</li>
-                    <li class="fragment green-current">Sass?</li>
                     <li class="fragment green-current">Sugestões?</li>
                 </ul>
             </ul>
@@ -84,20 +84,20 @@
             <h1>Conteúdo Programático</h1>
             <h2>1&ordm; Semestre</h2>
             <ul>
-                <li class="fragment">JavaScript Avançado</li>
-                <li class="fragment">Bootstrap</li>
-                <li class="fragment">Projeto Multidisciplinar</li>
-                <li class="fragment">Gulp</li>
+                <li class="fragment">Jekyll</li>
+                <li class="fragment">AngularJS</li>
+                <li class="fragment">React</li>
+                <li class="fragment">Orientação no AM</li>
             </ul>
         </section>
         <section>
             <h1>Conteúdo Programático</h1>
             <h2>2&ordm; Semestre</h2>
             <ul>
-                <li class="fragment">Aplicação de Gulp</li>
-                <li class="fragment">NodeJS</li>
-                <li class="fragment">NodeJS com Banco de Dados</li>
-                <li class="fragment">Projeto Multidisciplinar</li>
+                <li class="fragment">Ruby</li>
+                <li class="fragment">Rail</li>
+                <li class="fragment">MVC</li>
+                <li class="fragment">Orientação no AM</li>
             </ul>
         </section>
 
@@ -107,9 +107,9 @@
                 $NF = \frac{5.PS + 3.AM + 2.NAC}{10} $
             </h2>
             <ul>
-                <li>PS: Prova Semestral</li>
-                <li>AM: Avaliação Multidisciplinar</li>
-                <li>NAC: Nota de Avaliação Continuada</li>
+                <li class="fragment">PS: Prova Semestral</li>
+                <li class="fragment">AM: Avaliação Multidisciplinar</li>
+                <li class="fragment">NAC: Nota de Avaliação Continuada</li>
             </ul>
             <h1 class="fragment">Faltas</h1>
             <h3 class="fragment red">Não Falte!</h3>
@@ -138,6 +138,8 @@
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+        history: true,
+        height: 900,
 				dependencies: [
 					{ src: '../../plugin/markdown/marked.js' },
 					{ src: '../../plugin/markdown/markdown.js' },
