--- a/Aula3/slides/index.html
+++ b/Aula3/slides/index.html
@@ -204,8 +204,18 @@ Esse é o meu conteúdo...blablabla
               <li class="fragment">Prontinho! Verifique como está seu site em:
                 <a href="http://localhost:4000" target="_blank">http://localhost:4000</a>
               </li>
-              
             </ul>
+          </section>
+          <section>
+            <h3>Criando um layout</h3>
+            <ul>
+              <li class="fragment">Para a criação de um novo layout, devemos adicionar um novo arquivo na pasta <span class="green">_layouts</span></li>
+              <li class="fragment">Esse arquivo só poderá ser escrito em <span class="green">HTML</span></li>
+            </ul>
+          </section>
+          <section>
+            <h3>Exercício</h3>
+            <div>Crie um novo post e faça esse post utilizar um layout criado por você mesmo.</div>
           </section>
 			</div>
 		</div>
