--- a/Aula4/slides/index.html
+++ b/Aula4/slides/index.html
@@ -164,6 +164,10 @@ collections:
             </li>
           </ul>
         </section>
+        <section>
+          <h3>Links interessantes:</h3>
+          <a href="https://jekyllrb.com/docs/collections/">https://jekyllrb.com/docs/collections/</a>
+        </section>
       </div>
     </div>
 
