--- a/Aula6/slides/index.html
+++ b/Aula6/slides/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Optimization Technology</title>
+    <title>FrontEnd-Intelligence</title>
 
     <meta name="description" content="Aula de Desenvolvimento WEB - CC1620">
     <meta name="author" content="Guilherme A. W. Lopes">
@@ -126,7 +126,7 @@ body {
 
         <section data-background-video="assets/fundo.webm" class="intro" data-background-video-loop
                                                            data-background-color="#201825">
-          <h2>Optimization Technology </h2>
+          <h2>FrontEnd-Intelligence</h2>
           <small>Prof. Dr. Guilherme Wachs Lopes </small>
           <br>
           <small><a href="mailto:guilhermewachs@gmail.com?subject=Duvida de Aluno FIAP">guilhermewachs@gmail.com</a></small>
