--- a/Aula1/slides/index.html
+++ b/Aula1/slides/index.html
@@ -140,6 +140,7 @@
 			Reveal.initialize({
         history: true,
         height: 900,
+        width: 800,
 				dependencies: [
 					{ src: '../../plugin/markdown/marked.js' },
 					{ src: '../../plugin/markdown/markdown.js' },
