--- a/Aula2/slides/index.html
+++ b/Aula2/slides/index.html
@@ -76,7 +76,7 @@
             <pre><code data-language="bash" data-trim data-noescape>
 ~: jekyll new &lt;nome do site&gt;
             </code></pre>
-            Para iniciar um servidor local:
+            Para iniciar um servidor local: <small>(obs: você precisa estar dentro da pasta do projeto)</small>
             <pre><code data-language="bash" data-trim data-noescape>
 ~: jekyll serve
             </code></pre>
