--- a/Aula3/slides/index.html
+++ b/Aula3/slides/index.html
@@ -97,7 +97,7 @@ $ gem install jekyll bundler
           <section>
             <h3>Visualizando seu Site</h3>
             <ul>
-              <li class="fragment">Para conseguir visualizar seu site, você deverá rodar:
+              <li class="fragment">Para conseguir visualizar seu site, você deverá rodar de dentro da pasta do projeto:
                 <pre class="shell"><code>$ jekyll build</code></pre>
               </li>
               <li class="fragment">E, depois:
