--- a/Aula6/slides/index.html
+++ b/Aula6/slides/index.html
@@ -146,7 +146,7 @@ body {
             <li>Desenhada para ajustar de forma incremental a qualquer projeto</li>
             <li>Possibilita a implementação do padrão MVVM</li>
             <li>Separa cada componente com sua própria lógica, template e estilo</li>
-            <li><a target="_blank" href="https://vuejs.org/v2/guide/">documentação</a></li>
+            <li><a target="_blank" href="https://br.vuejs.org/v2/guide/">documentação</a></li>
           </ul>
         </section>
 
