--- a/Aula6/slides/index.html
+++ b/Aula6/slides/index.html
@@ -367,6 +367,18 @@ $: npx webpack --watch
         </section>
 
         <section>
+            <h2>Referências importantes:</h2>
+            <ul>
+              <li><a href="https://br.vuejs.org/v2/guide/index.html" target="_blank">Introdução ao Vue</a></li>
+              <li><a href="https://br.vuejs.org/v2/guide/components.html" target="_blank">Componentes (Esse é fundamental!)</a></li>
+              <li><a href="https://br.vuejs.org/v2/guide/syntax.html" target="_blank">Sintaxe dos componentes</a></li>
+              <li><a href="https://br.vuejs.org/v2/guide/instance.html" target="_blank">Dados e ciclo de vida de um componente</a></li>
+              <li><a href="https://br.vuejs.org/v2/guide/events.html" target="_blank">Eventos</a></li>
+              <li><a href="https://br.vuejs.org/v2/guide/forms.html" target="_blank">v-model</a></li>
+            </ul>
+        </section>
+
+        <section>
           <ul>
             <li>Mais exemplos vistos em aula</li>
             <li>Veja muito mais em <a href="http://vuejs.org">vuejs.org</a></li>
@@ -374,6 +386,7 @@ $: npx webpack --watch
           </ul>
 
         </section>
+
 
       </div>
     </div>
